Fix: Better contrast in title colors for the library

--- a/bookserver/staticAssets/index.css
+++ b/bookserver/staticAssets/index.css
@@ -59,7 +59,7 @@
     top: 0;
     left: 0;
     z-index: 1;
-    color: black;
+    color: white;
     margin-left: 1%;
 }
 
